--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 # The contents of this file is based on https://github.com/home-assistant/core/blob/dev/pyproject.toml
 
-target-version = "py310"
+target-version = "py312"
 
-select = [
+lint.select = [
     "B007", # Loop control variable {name} not used within loop body
     "B014", # Exception handler with duplicate exception
     "C",  # complexity
@@ -26,7 +26,7 @@ select = [
     "W",  # pycodestyle
 ]
 
-ignore = [
+lint.ignore = [
     "D202",  # No blank lines allowed after function docstring
     "D203",  # 1 blank line required before class docstring
     "D213",  # Multi-line docstring summary should start at the second line
@@ -40,11 +40,11 @@ ignore = [
 
 exclude = ["custom_components/virtual"]
 
-[flake8-pytest-style]
+[lint.flake8-pytest-style]
 fixture-parentheses = false
 
 #[pyupgrade]
 #keep-runtime-typing = true
 
-[mccabe]
+[lint.mccabe]
 max-complexity = 25
